# tachibana

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  rustfmt.toml
src/: color.rs  lib.rs  main.rs  material.rs  ray.rs  shape.rs  tracer.rs  vec.rs
