[package]
name = "tachibana"
version = "0.1.0"
license = "0BSD"
edition = "2024"
publish = false

[dependencies]
argh = "0.1.13"
fastrand = "2.3.0"
image = { version = "0.25.6", default-features = false, features = ["png"] }
rayon = "1.10.0"

[profile.release]
debug = true # for profiling
lto = true
panic = "abort"
